# akars

./: Cargo.toml  README.md  build-sg2002.sh  build.rs
.cargo/: config.toml
scripts/: env.sh
src/: arm.rs  camera.rs  cv_bridge.cpp  detector.rs  lib.rs  linux.rs  main.rs  motor.rs  robot.rs  serial.rs  tpu.rs  web.rs
